<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/classes_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hozturk.app_no_db.Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="0dp"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/eit2"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="0dp"
                android:orientation="horizontal"
                android:weightSum="1"
                tools:ignore="NestedWeights,UnusedAttribute">

                <Button

                    android:id="@+id/classes"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_classes"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:gravity="bottom|center"
                    android:text="@string/classes"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:visibility="visible"
                    tools:ignore="@color/cardview_light_background,ButtonStyle,NestedWeights"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/events"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_events"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:gravity="bottom|center"
                    android:text="@string/events"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,ContentDescription"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/settings"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_settings"
                    android:backgroundTint="@android:color/holo_blue_bright"
                    android:gravity="bottom|center"
                    android:text="@string/settings"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,ContentDescription,NestedWeights"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/profile"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_profile"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:gravity="bottom|center"
                    android:text="Profile"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,ContentDescription,HardcodedText"
                    tools:targetApi="lollipop" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>