<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#DDDDDDDD"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="DisableBaselineAlignment,RtlHardcoded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="InefficientWeight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/quickContactBadge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="250dp"
                    android:minWidth="300dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/Present"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:minWidth="200dp"
                    android:text="@string/present"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <RadioButton
                    android:id="@+id/Excused"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:minWidth="200dp"
                    android:text="@string/excused"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/Absent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_dark"
                    android:minWidth="100dp"
                    android:text="@string/absent"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateIds" />

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:minHeight="0dp"
            tools:ignore="InefficientWeight"
            tools:minHeight="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/studentID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout2"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="30dp"
                    tools:ignore="HardcodedText,LabelFor,ObsoleteLayoutParam" />


                <EditText
                    android:id="@+id/studentFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout2"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="30dp"
                    tools:ignore="HardcodedText,LabelFor,ObsoleteLayoutParam" />

                <EditText
                    android:id="@+id/studentLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout2"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="30dp"
                    tools:ignore="HardcodedText,LabelFor,ObsoleteLayoutParam" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="70dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editText"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:minHeight="30dp"
                    android:text="abcd@eit.co.nz"
                    tools:ignore="HardcodedText,LabelFor,NestedWeights,ObsoleteLayoutParam" />

                <Button
                    android:id="@+id/Send_Mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:minHeight="30dp"
                    android:text="@string/send_mail"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="70dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Seatrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/editText3"
                    android:layout_alignBottom="@+id/editText3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="30dp"
                    android:text="Seat Number"
                    tools:ignore="HardcodedText,LabelFor,ObsoleteLayoutParam" />

                <EditText
                    android:id="@+id/Seatnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/editText2"
                    android:layout_toEndOf="@+id/editText2"
                    android:layout_toRightOf="@+id/editText2"
                    android:ems="10"
                    android:inputType="number"
                    android:minHeight="30dp"
                    android:text="5a"
                    tools:ignore="HardcodedText,LabelFor,ObsoleteLayoutParam" />

            </LinearLayout>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>